--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -169,6 +169,11 @@
             android:name=".ui.activity.AdministrationActivity"
             android:screenOrientation="portrait" />
 
+
+        <activity
+            android:name=".ui.activity.AddClientActivity"
+            android:screenOrientation="portrait" />
+
         <activity
             android:name=".ui.activity.PayActivit"
             android:screenOrientation="portrait" />
