--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,16 +23,14 @@ android {
             abortOnError false
         }
 
-        ndk {
-            //选择要添加的对应 cpu 类型的 .so 库。
-            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
-        }
         manifestPlaceholders = [
                 JPUSH_PKGNAME : applicationId,
                 JPUSH_APPKEY : "858b357d94ecb1e15965c6b2", //JPush 上注册的包名对应的 Appkey.
                 JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
         ]
     }
+
+
     //签名信息
     signingConfigs {
         release {
@@ -109,13 +107,16 @@ dependencies {
     implementation 'com.amap.api:search:latest.integration'
     implementation 'com.amap.api:location:latest.integration'
     implementation 'com.yanzhenjie:album:2.1.3'
-    implementation 'com.youth.banner:banner:1.4.10'  //最新版本
+    implementation 'com.youth.banner:banner:1.4.10'
+    //最新版本
     implementation files('libs/ocr-sdk.jar')
     implementation 'com.github.crossoverone:StatusBarUtil:1.3.4'
     implementation 'com.github.chrisbanes:PhotoView:2.0.0'
     implementation 'com.google.zxing:core:3.3.0'
-    implementation 'cn.jiguang.sdk:jpush:3.6.4'  // 此处以JPush 3.6.4 版本为例。
-    implementation 'cn.jiguang.sdk:jcore:2.3.6'  // 此处以JCore 2.3.6 版本为例。
+    implementation 'cn.jiguang.sdk:jpush:3.6.4'
+    // 此处以JPush 3.6.4 版本为例。
+    implementation 'cn.jiguang.sdk:jcore:2.3.6'
+    // 此处以JCore 2.3.6 版本为例。
     implementation 'top.zibin:Luban:1.1.3'
     implementation 'com.github.lihangleo2:ShadowLayout:2.0.1'
 }
