--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -114,6 +114,10 @@
             android:screenOrientation="portrait" />
 
         <activity
+            android:name=".ui.activity.VehicleActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
             android:name=".ui.activity.PreviewActivity"
             android:screenOrientation="portrait" />
 
