添加客户信息

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,6 +94,10 @@
         <activity
             android:name=".ui.activity.BasicOtherActivity"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.activity.PrivacyActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.MassageActivity"
             android:screenOrientation="portrait" />
